*** 20010218_1 by lusky
- revved patchlevel to 6.0.2
- CLIENT_SERVER was missing from config.h


*** 20010110_2 by lusky
- revved patchlevel to 6.0.1


*** 20010110_1 by lusky
- removed old ban removel code (db)
- removed unused locally_created flag (db)


*** 20010103_2 by lusky
- fixed a spelling error (wc)


*** 20010103_1 by lusky
- revved patchlevel to 6.0 (Houston, we have a release!)


*** 20010102_1 by lusky
backported latest h7 userhost


*** 20001230_1 by lusky
revved patchlevel to rc8
hard DoS could cause restart due to clock lag (db)
Fixes issue of showing C/c/N IPs to users when they should be masked (jdc)
Extends RPC_STATSCONN output to show total number of clients ever
  connected since /restart or startup. (jdc)


*** 20001221_2 by lusky
added IP to I-line is full notice (pro)
fixed rehash help (wc)
updated opers.txt (wc)



*** 20001221_1 by lusky
fixed a compile warning on solaris


*** 20001201_1 by lusky
added Gline Exemption flag ('_') to Ilines


*** 20001126_1 by lusky
hide baninfo for hide_ops (db)
misc documentation cleanups (wc)
changed SendWallops and SendServNotice macros to check IsAnOper


*** 20001125_1 by lusky
fix to m_links (db)


*** 20001124_4 by lusky
updated defaults for new stuff in config.h


*** 20001124_3 by lusky
oper privs 'K' fix (wc)
missing RPL_ENDOFTRACE's in m_ltrace (wc)
remove LOCAL_KILL_ONLY remnant (wc)
updated m_info.h with new config options


*** 20001124_2 by lusky
added a bunch of casts to fix signedness warnings with irix compiler and
  with gcc -Wall -pedantic


*** 20001124_1 by lusky
fixed IPQuadTab corruption issue [werd!@#@!#!@] (db/pvr)
added hide_ops (db)


*** 20001122_1 by lusky
fixed the m_userhost fix


*** 20001121_1 by lusky
revved patchlevel to rc7
redundant if in server_estab() (gp)
ported SERVERHIDE from +ins patch (ejb/jrl)
disabled hunting by nick or wildcard for local nonopers with SERVERHIDE


*** 20001118_1 by lusky
changed a bunch of debugging sendto_ops to sendto_realops